# PyReport

./: .coverage  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
pyreport/: __init__.py  core.py  effect_sizes.py  formatters.py  utils.py
pyreport/reporters/: __init__.py  anova.py  base.py  chi_square.py  correlation.py  dataframe.py  nonparametric.py  regression.py  ttest.py
tests/: test_core.py  test_effect_sizes.py  test_extended.py  test_formatters.py  test_reporters.py
